# AI-Reader-V2

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  I18N_PLAN.md  LICENSE  LICENSE-COMMERCIAL.md  LLM驱动的小说世界地图生成系统_技术研究报告.md  PRD-v1.0.md  PRD.md  README.md  README_EN.md  start-dev.bat  付费模式的可能性研究.md  市场研究与执行计划-2026.md  自动文学制图学：利用本地大语言模型从叙事文本构建交互式地理空间系统的技术框架研究报告.md
backend/: ai-reader-backend.spec  ai-reader-sidecar.spec  build_sidecar.py  pyproject.toml  sidecar_entry.py  test_scene_split.py
backend/data/: zh_geonames.tsv
backend/sample-novels/: README.md  三国演义-样本.txt  西游记-样本.txt
backend/scripts/: ablation_hierarchy.py  ablation_study.py  benchmark_import.py  bootstrap_ci.py  bootstrap_ci_result.json  compile_prompts.py  cross_llm_replication.py  cross_llm_replication_result.json  generate_sample_data.py  graphrag_style_baseline.py  hierarchy_iteration.py  m5_accuracy_eval.py  m5_no_edmonds_ablation.py  multi_seed_evaluate.py  pure_mwa_ablation.py  reproducibility_check.py  verify_full_pipeline_metrics.py  zero_shot_baseline.py
backend/tests/: conftest.py  test_alias_resolver.py  test_chapter_classifier.py  test_chapter_facts_markdown.py  test_chapter_splitter.py  test_cost_service.py  test_edmonds_cycle_fixpoint.py  test_entity_overrides.py  test_export_service.py  test_fact_validator.py  test_hallucination_filter.py  test_hierarchy_quality.py  test_map_quality.py  test_name_authority.py  test_name_resolver.py  test_orphan_close_uber_root.py  test_profile_quality_checker.py  test_realtime_cost.py  test_relation_utils.py  test_sample_data_service.py  test_schema_migration.py  test_settings.py  (+9 more)
marketing/: bilibili-video-script-v2.md  config.example.yaml  novels_input.txt  pyproject.toml
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
(+506 files in other folders)
