[project]
name = "ai-reader-v2-backend"
version = "0.1.0"
description = "AI Reader V2 Backend - Novel analysis with local LLM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosqlite",
    "chromadb",
    "pydantic>=2.0",
    "httpx",
    "websockets",
]
