[project]
name = "ai-reader-v2-backend"
version = "0.11.0"
description = "AI Reader V2 Backend - Novel analysis with local LLM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosqlite",
    "chromadb",
    "sentence-transformers",
    "pydantic>=2.0",
    "httpx",
    "websockets",
    "python-multipart",
    "pillow>=11.3.0",
    "opensimplex>=0.4.5.1",
    "jieba>=0.42.1",
]
